www/css/main.css
/* ... */
.subjectName {
    padding: 15px;
    border-bottom: 1.5px solid #BCDBE1;
}

.subjectName:last-child {
    margin-bottom: 50px;                /*This makes sure you can scroll down far enough to see the whole name*/
}

#addSubjectButton {
    color: #607A93;
    border: none;
    font-size: 1em;
    height: 50px;
    background-color: rgba(255,255,255,0.4);
    width: 100%;
    text-align: center;
    border-bottom: 1.5px solid #BCDBE1;
}
.completedTasksButton{
    display: block;
    background-color: transparent;
    color: white;
    font-size: 1.2em;
    width: 250px;
    margin: auto;
    margin-bottom: 50px;
    border: none;
}

.errorMessage {
    color: red;
}

/*===================================================================================================================*/
/* TODOTASK CARDS ON SUBJECTS PAGE*/
/*===================================================================================================================*/

.todoWrapper {
    overflow-x: hidden;
    width: 85%;
    margin: auto;
    padding-bottom: 60px;
}

.todoTask {
    position: relative;
    width:100%;
    padding:15px;
    display:inline-block;
    background-color: #f7f7f7;
    margin-bottom: 10px;
}

.todoTask input{
    border: none;
    background-color: transparent;
    opacity: 1;
}

.todoDate{
    position: absolute;
    right: 45px;
    padding: 0px;
    font-size: 1em;
    opacity: 1;
}

.todoDescription {
    position: absolute;
    right: 200px;
    width: 250px;
    opacity: .8;
    font-size: .9em;
}

.todoTitle {
    font-size: 1em;
    width: 250px;
    opacity: 1;
}

/*==================================================================================================*/
/* ADD TASKS IN BULK */
/*==================================================================================================*/

.bulkWrapper {
    background-color: white;
    width:85%;
    margin: 3% auto;
}

.bulkText {
    width: 60%;
    height: 50px;
    padding: 3px 0px;
    border: 0;
    color: #1E7D8A;
    font-size: 1.0em;
    padding-left: 15px;
}

.bulkText::-webkit-input-placeholder {color: rgba(245, 68, 168, 0.5);}
.bulkText:-moz-placeholder {color: rgba(245, 68, 168, 0.5);} /* Firefox 18- */
.bulkText::-moz-placeholder {color: rgba(245, 68, 168, 0.5);} /* Firefox 19+ */
.bulkText:-ms-input-placeholder {color: rgba(245, 68, 168, 0.5);}

.bulkDate {
    border: 0;
    color: #1E7D8A;
    font-size: 1.0em;
    padding-left: 15px;
}

.calendarImg {
    padding-right: 20px;
    vertical-align:middle;
    cursor:pointer;
}

.bulkSubmit {
    /*padding-right: 20px;*/
}

/*==================================================================================================*/
/* COLOUR PICKERS */
/*==================================================================================================*/

#colourPalette {
    width: 180px;
    height: 210px;
    background-color: #ffffff;
    display: none;
}

#colourPaletteAddSubject{
    position: relative;
    width: 100%;
}

/*.colourOption {*/
    /*position: relative;*/
    /*float: left;*/
    /*width: 30px;*/
    /*height: 30px;*/
    /*margin: 5px;*/
    /*cursor: pointer;*/
/*}*/


.colourOptionNew {
    width: 100%;
    padding-bottom: 100%;
    box-sizing: border-box;
    cursor: pointer;
}

.chosenColour {
    box-sizing: border-box;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    outline: 2px solid white;
}

.usedColour:after {
    font-family: 'FontAwesome';
    color: white;
    content: '';
    font-size: .1em;
    float: right;
    margin-right: 4px;
    margin-top: 10px;
    opacity: .6;
}

.colourMessage {
    display: inline-block;
    color: #607A93;
    line-height: 1.75em;
}
/*==================================================================================================*/
/* COLOUR PICKER COLUMNS */
/*==================================================================================================*/

/*  SECTIONS  */
.colourSection {
    clear: both;
    padding: 0px;
    margin: 0px;
}

/*  COLUMN SETUP  */
.colourCol {
    display: block;
    float:left;
    margin: 1% 0 1% 1.6%;
}
.colourCol:first-child { margin-left: 0; }

/*  GROUPING  */
.colourGroup:before,
.colourGroup:after { content:""; display:table; }
.colourGroup:after { clear:both;}
.colourGroup { zoom:1; /* For IE 6/7 */ }

.span_1_of_6 {
    width: 15.33%;
}

/*==================================================================================================*/
/* EDIT & DELETE ICONS */
/*==================================================================================================*/

.editColour {
    box-sizing: border-box;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    display: inline-block;
    width: 30px;
    height: 30px;
    cursor: pointer;
    margin: 5% 10% 5% 5%;
    float: right;
}

.editColour:hover{
    border: 2px solid whitesmoke;
}

.binIcon{
    height: 30px;
    width: 23px;
    display: inline-block;
    cursor: pointer;
    margin-top: 5%;
    margin-right: -2%;
    opacity: .5;
    float: right;
}


.binIcon:hover{
    opacity:1;
}

.pencilIcon{
    display: inline-block;
    cursor: pointer;
    margin-top: 5%;
    height: 30px;
    width: 30px;
    margin-right: 3%;
    opacity: .5;
    float: right;
}

.pencilIcon:hover{
    opacity:1;
}




/*==================================================================================================*/
/* COLOURS THEME 1 */
/*==================================================================================================*/

.theme1Colour1 {color: #F4A460;} /*text colour*/
.theme1Colour1.mainColour {background-color: #F4A460;}
.theme1Colour1.secondaryColour {background-color: #EEC58F;}
.theme1Colour1.active {background-color: #EEC58F;} /*active subject button colour*/
.theme1Colour1.expanded {color: #FFFFFF;} /*text colour for titles of expanded tasks*/

.theme1Colour2 {color: #F3742B;} /*text colour*/
/* ... */

